Trying to add the headerbar color

--- a/data/style/style.css
+++ b/data/style/style.css
@@ -23,3 +23,7 @@
 @define-color black #000000;
 @define-color whiteElementary #FAFAFA;
 @define-color blackElementary #333333;
+
+.progress_bar.progressbar {
+    background: @colorPrimary;
+}
